--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,45 +1,40 @@
-<nav
-  aria-label="Site Nav"
-  class="mx-auto flex max-w-3xl items-center justify-between p-4"
->
-  <a
-    href="/"
-    class="inline-flex h-10 w-10 items-center justify-center rounded-lg bg-gray-100"
-  >
-    <span class="sr-only">Logo</span>
-    👋
-  </a>
+<header aria-label="Page Header" class="bg-gray-50">
+  <div class="mx-auto max-w-screen-xl px-4 py-6 sm:py-10 sm:px-6 lg:px-8">
+    <div class="sm:flex sm:items-center sm:justify-between">
 
-  <ul class="flex items-center gap-2 text-sm font-medium text-gray-500">
-    <li class="hidden lg:block">
-      <a class="rounded-lg px-3 py-2" href="/"> Home </a>
-    </li>
+      <div class="text-center sm:text-left">
+        <a href="/" class="text-2xl font-bold text-gray-900 sm:text-3xl">
+          Kevin Fiorentino —△🌈
+        </a>
+        <p class="mt-1.5 text-sm text-gray-500">
+          Javascript Engineer | Blockchain & Web3 | Graduate in Systems
+        </p>
+      </div>
 
-    <li><a class="rounded-lg px-3 py-2" href=""> Projects </a></li>
+      <div class="mt-4 flex flex-col gap-4 sm:mt-0 sm:flex-row sm:items-center">
 
-    <li>
-      <a
-        class="inline-flex items-center gap-2 rounded-lg px-3 py-2"
-        href=""
-        target="_blank"
-      >
-        External
-
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke="currentColor"
-          class="h-4 w-4"
+        <button
+          class="text-gray-500 transition hover:text-gray-700 focus:outline-none focus:ring px-5 py-1"
+          type="button"
         >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="2"
-            d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"
-          ></path>
-        </svg>
-      </a>
-    </li>
-  </ul>
-</nav>
+          <span class="text-sm font-medium">Home</span>
+        </button>
+
+        <button
+          class="text-gray-500 transition hover:text-gray-700 focus:outline-none focus:ring px-5 py-1"
+          type="button"
+        >
+          <span class="text-sm font-medium">Blog</span>
+        </button>
+
+        <button
+          class="text-gray-500 transition hover:text-gray-700 focus:outline-none focus:ring px-5 py-1"
+          type="button"
+        >
+          <span class="text-sm font-medium">Contact</span>
+        </button>
+
+      </div>
+    </div>
+  </div>
+</header>
