--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,14 +2,12 @@
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 ---
 
 <Layout title="Welcome to Astro.">
-
-    <Header></Header>
-
+  <Header></Header>
 	<main>
-
 		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
 		<p class="instructions">
 			To get started, open the directory <code>src/pages</code> in your project.<br />
@@ -38,6 +36,7 @@ import Header from '../components/Header.astro';
 			/>
 		</ul>
 	</main>
+  <Footer></Footer>
 </Layout>
 
 <style>
