--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,9 @@ import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
+
+const solana = await Astro.glob('../content/*.md');
+
 ---
 
 <Layout title="Welcome to Astro.">
@@ -14,26 +17,16 @@ import Footer from '../components/Footer.astro';
 			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
 		</p>
 		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
+      {
+        solana.map(item => (
+          <Card
+            href="https://docs.astro.build/"
+            title={item.frontmatter.title}
+            body="asd"
+            description={item.frontmatter.description}
+          />
+        ))
+      }
 		</ul>
 	</main>
   <Footer></Footer>
@@ -78,8 +71,13 @@ import Footer from '../components/Footer.astro';
 	}
 	.link-card-grid {
 		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(45ch, 1fr));
+		grid-template-columns: 1fr 1fr;
 		gap: 1rem;
 		padding: 0;
 	}
+  @media (max-width: 768px) {
+    .link-card-grid {
+      grid-template-columns: 1fr;
+    }
+  }
 </style>
