--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,9 +1,8 @@
 <footer aria-label="Site Footer" class="bg-white lg:grid lg:grid-cols-5">
   <div class="relative block h-32 lg:col-span-2 lg:h-full">
-    <img
+    <img class="absolute inset-0 object-cover w-full h-full"
       src="https://cdn.wallpapersafari.com/7/49/8nruZV.png"
       alt=""
-      class="absolute inset-0 object-cover w-full h-full"
     />
   </div>
 
@@ -11,10 +10,7 @@
     <div class="grid grid-cols-1 gap-8 sm:grid-cols-2">
       <div>
         <p>
-          <a
-            href="/"
-            class="block text-2xl font-medium text-gray-900 hover:opacity-75 sm:text-3xl"
-          >
+          <a href="/" class="block text-2xl font-medium text-gray-900 hover:opacity-75 sm:text-3xl">
             Kev
           </a>
           <span class="text-xs tracking-wide text-gray-500 uppercase">
