--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,28 +13,20 @@
 
       <div class="mt-4 flex flex-col gap-4 sm:mt-0 sm:flex-row sm:items-center">
 
-        <button
-          class="text-gray-500 transition hover:text-gray-700 focus:outline-none focus:ring px-5 py-1"
-          type="button"
-        >
+        <button class="text-gray-500 transition hover:text-gray-700 focus:outline-none focus:ring px-5 py-1" type="button">
           <span class="text-sm font-medium">Home</span>
         </button>
 
-        <button
-          class="text-gray-500 transition hover:text-gray-700 focus:outline-none focus:ring px-5 py-1"
-          type="button"
-        >
+        <button class="text-gray-500 transition hover:text-gray-700 focus:outline-none focus:ring px-5 py-1" type="button">
           <span class="text-sm font-medium">Blog</span>
         </button>
 
-        <button
-          class="text-gray-500 transition hover:text-gray-700 focus:outline-none focus:ring px-5 py-1"
-          type="button"
-        >
+        <button class="text-gray-500 transition hover:text-gray-700 focus:outline-none focus:ring px-5 py-1" type="button">
           <span class="text-sm font-medium">Contact</span>
         </button>
 
       </div>
+
     </div>
   </div>
 </header>
