Pages and CSS style

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,17 +13,21 @@
 
       <div class="mt-4 flex flex-col gap-4 sm:mt-0 sm:flex-row sm:items-center">
 
-        <button class="text-gray-500 transition hover:text-gray-700 focus:outline-none focus:ring px-5 py-1" type="button">
+        <a href="/" title="" class="text-gray-500 transition hover:text-gray-700 focus:outline-none focus:ring px-5 py-1">
           <span class="text-sm font-medium">Home</span>
-        </button>
+        </a>
 
-        <button class="text-gray-500 transition hover:text-gray-700 focus:outline-none focus:ring px-5 py-1" type="button">
+        <a href="/blog" title="" class="text-gray-500 transition hover:text-gray-700 focus:outline-none focus:ring px-5 py-1">
           <span class="text-sm font-medium">Blog</span>
-        </button>
+        </a>
 
-        <button class="text-gray-500 transition hover:text-gray-700 focus:outline-none focus:ring px-5 py-1" type="button">
+        <a href="/who-i-am" title="" class="text-gray-500 transition hover:text-gray-700 focus:outline-none focus:ring px-5 py-1">
+          <span class="text-sm font-medium">Who I am</span>
+        </a>
+
+        <a href="/contact" title="" class="text-gray-500 transition hover:text-gray-700 focus:outline-none focus:ring px-5 py-1">
           <span class="text-sm font-medium">Contact</span>
-        </button>
+        </a>
 
       </div>
 
