--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -38,9 +38,19 @@ const { href, title, body, description } = Astro.props;
     </div>
 
     <div class="sm:flex sm:items-end sm:justify-end">
-      <a href="#" title="X" class="block bg-yellow-400 px-5 py-3 text-center text-xs font-bold uppercase text-gray-900 transition hover:bg-yellow-500">
+      <a href="#" title="X" class="block px-5 py-3 text-center text-xs font-bold uppercase text-gray-900 transition">
         Read Blog
       </a>
     </div>
   </div>
 </article>
+
+<style>
+article {
+  background: linear-gradient(45deg, var(--accent), #6d474a 30%, var(--accent) 60%);
+}
+.block {
+  color: white;
+  background-color: #6d474a;
+}
+</style>
