--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,13 +4,9 @@ h1 {
     margin: 0;
 }
 .text-gradient {
-    background-image: var(--accent-gradient);
+    background-image: var(--meddle-background);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-size: 400%;
     background-position: 0%;
 }
-
-/*
-    background: linear-gradient(45deg, var(--accent), #6d474a 30%, var(--accent) 60%);
-*/
