--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -20,26 +20,26 @@
 
         <ul class="flex gap-6 mt-8">
           <li>
-            <a href="/" rel="noreferrer" target="_blank" class="text-gray-700 transition hover:opacity-75">
+            <a href="/" rel="noreferrer" target="_blank" class="transition hover:opacity-75">
               <span class="sr-only">LinkedIn</span>
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19 18" class="d-block" height="18">
-                <path d="M3.94 2A2 2 0 1 1 2 0a2 2 0 0 1 1.94 2zM4 5.48H0V18h4zm6.32 0H6.34V18h3.94v-6.57c0-3.66 4.77-4 4.77 0V18H19v-7.93c0-6.17-7.06-5.94-8.72-2.91z" fill="currentColor"></path>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19 18" height="18">
+                <path d="M3.94 2A2 2 0 1 1 2 0a2 2 0 0 1 1.94 2zM4 5.48H0V18h4zm6.32 0H6.34V18h3.94v-6.57c0-3.66 4.77-4 4.77 0V18H19v-7.93c0-6.17-7.06-5.94-8.72-2.91z"></path>
               </svg>
             </a>
           </li>
           <li>
-            <a href="/" rel="noreferrer" target="_blank" class="text-gray-700 transition hover:opacity-75">
+            <a href="/" rel="noreferrer" target="_blank" class="transition hover:opacity-75">
               <span class="sr-only">GitHub</span>
-              <svg height="20" class="octicon octicon-mark-github d-block" viewBox="0 0 16 16" version="1.1" width="20" aria-hidden="true">
+              <svg height="20" viewBox="0 0 16 16" version="1.1" width="20" aria-hidden="true">
                 <path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path>
               </svg>
             </a>
           </li>
           <li>
-            <a href="/" rel="noreferrer" target="_blank" class="text-gray-700 transition hover:opacity-75">
+            <a href="/" rel="noreferrer" target="_blank" class="transition hover:opacity-75">
               <span class="sr-only">Twitter</span>
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 273.5 222.3" class="d-block" height="18">
-                <path d="M273.5 26.3a109.77 109.77 0 0 1-32.2 8.8 56.07 56.07 0 0 0 24.7-31 113.39 113.39 0 0 1-35.7 13.6 56.1 56.1 0 0 0-97 38.4 54 54 0 0 0 1.5 12.8A159.68 159.68 0 0 1 19.1 10.3a56.12 56.12 0 0 0 17.4 74.9 56.06 56.06 0 0 1-25.4-7v.7a56.11 56.11 0 0 0 45 55 55.65 55.65 0 0 1-14.8 2 62.39 62.39 0 0 1-10.6-1 56.24 56.24 0 0 0 52.4 39 112.87 112.87 0 0 1-69.7 24 119 119 0 0 1-13.4-.8 158.83 158.83 0 0 0 86 25.2c103.2 0 159.6-85.5 159.6-159.6 0-2.4-.1-4.9-.2-7.3a114.25 114.25 0 0 0 28.1-29.1" fill="currentColor"></path>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 273.5 222.3" height="18">
+                <path d="M273.5 26.3a109.77 109.77 0 0 1-32.2 8.8 56.07 56.07 0 0 0 24.7-31 113.39 113.39 0 0 1-35.7 13.6 56.1 56.1 0 0 0-97 38.4 54 54 0 0 0 1.5 12.8A159.68 159.68 0 0 1 19.1 10.3a56.12 56.12 0 0 0 17.4 74.9 56.06 56.06 0 0 1-25.4-7v.7a56.11 56.11 0 0 0 45 55 55.65 55.65 0 0 1-14.8 2 62.39 62.39 0 0 1-10.6-1 56.24 56.24 0 0 0 52.4 39 112.87 112.87 0 0 1-69.7 24 119 119 0 0 1-13.4-.8 158.83 158.83 0 0 0 86 25.2c103.2 0 159.6-85.5 159.6-159.6 0-2.4-.1-4.9-.2-7.3a114.25 114.25 0 0 0 28.1-29.1"></path>
               </svg>
             </a>
           </li>
@@ -109,8 +109,13 @@
         <nav aria-label="Footer Navigation - Support">
           <ul class="flex flex-wrap gap-4 text-xs">
             <li>
+              This website was made with
               <a href="https://astro.build/" target="_blank" class="text-gray-500 transition hover:opacity-75">
-                This website was made with Astro
+                Astro
+                <svg data-hk="0-0" width="57" height="72" viewBox="0 0 57 72">
+                  <path d="M18.5385 61.3257C15.2904 58.3524 14.3422 52.105 15.6955 47.5789C18.0419 50.4325 21.2931 51.3364 24.6608 51.8467C29.8596 52.6341 34.9653 52.3396 39.7948 49.96C40.3473 49.6876 40.8579 49.3254 41.4616 48.9584C41.9147 50.275 42.0327 51.6042 41.8744 52.957C41.4895 56.2515 39.8523 58.7965 37.2482 60.7257C36.2069 61.4973 35.105 62.1871 34.0295 62.9147C30.7256 65.151 29.8317 67.7731 31.0732 71.5874C31.1027 71.6803 31.129 71.7732 31.1958 72C29.5089 71.2441 28.2767 70.1433 27.3378 68.696C26.3461 67.1684 25.8743 65.4786 25.8495 63.6502C25.8371 62.7604 25.8371 61.8627 25.7176 60.9855C25.4258 58.8469 24.4233 57.8894 22.5347 57.8343C20.5963 57.7776 19.0631 58.9776 18.6565 60.8674C18.6254 61.0123 18.5804 61.1556 18.5354 61.3241L18.5385 61.3257Z" fill="black"></path>
+                  <path d="M0 46.8248C0 46.8248 9.6182 42.1327 19.2633 42.1327L26.5354 19.5951C26.8076 18.5052 27.6025 17.7645 28.5 17.7645C29.3975 17.7645 30.1924 18.5052 30.4646 19.5951L37.7367 42.1327C49.1599 42.1327 57 46.8248 57 46.8248C57 46.8248 40.6627 2.25578 40.6307 2.16636C40.1618 0.848661 39.3703 0 38.3031 0H18.6986C17.6314 0 16.8718 0.848661 16.3709 2.16636C16.3357 2.2541 0 46.8248 0 46.8248Z" fill="black"></path>
+                </svg>
               </a>
             </li>
           </ul>
