--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,4 +1,9 @@
 ---
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
+
+import '../styles/global.css';
+
 export interface Props {
 	title: string;
 }
@@ -16,7 +21,11 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-		<slot />
+    <Header></Header>
+    <main>
+      <slot />
+    </main>
+    <Footer></Footer>
 	</body>
 </html>
 <style is:global>
@@ -34,4 +43,9 @@ const { title } = Astro.props;
 		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
 			Bitstream Vera Sans Mono, Courier New, monospace;
 	}
+  main {
+    margin: auto;
+    padding: 1.5rem;
+    max-width: 150ch;
+  }
 </style>
