--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,9 +14,10 @@ const solana = await Astro.glob('../content/solana/*.md');
       solana.map(item => (
         <BlogCard
           title={item.frontmatter.title}
-          body="asd"
-          href="https://docs.astro.build/"
-          description={item.frontmatter.description}
+          desc={item.frontmatter.description}
+          image={item.frontmatter.image}
+          date={item.frontmatter.date}
+          href={item.frontmatter.href}
         />
       ))
     }
