--- a/src/pages/blog/ipfs/[...slug].astro
+++ b/src/pages/blog/ipfs/[...slug].astro
@@ -1,9 +1,9 @@
 ---
 import { getCollection } from 'astro:content';
-import MainLayout from '../../layouts/MainLayout.astro';
+import MainLayout from '../../../layouts/MainLayout.astro';
 
 export async function getStaticPaths() {
-  const posts = await getCollection('solana');
+  const posts = await getCollection('ipfs');
   return posts.map((post) => ({
     params: { slug: post.slug },
     props: post,
