Header y footer SEO

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,19 +13,19 @@
 
       <div class="mt-4 flex flex-col gap-4 sm:mt-0 sm:flex-row sm:items-center">
 
-        <a href="/" title="" class="text-gray-500 transition hover:text-gray-700 focus:outline-none focus:ring px-5 py-1">
+        <a href="/" title="Home" class="text-gray-500 transition hover:text-gray-700 focus:outline-none focus:ring px-5 py-1">
           <span class="text-sm font-medium">Home</span>
         </a>
 
-        <a href="/blog" title="" class="text-gray-500 transition hover:text-gray-700 focus:outline-none focus:ring px-5 py-1">
+        <a href="/blog" title="Blog" class="text-gray-500 transition hover:text-gray-700 focus:outline-none focus:ring px-5 py-1">
           <span class="text-sm font-medium">Blog</span>
         </a>
 
-        <a href="/who-i-am" title="" class="text-gray-500 transition hover:text-gray-700 focus:outline-none focus:ring px-5 py-1">
+        <a href="/who-i-am" title="Who I am" class="text-gray-500 transition hover:text-gray-700 focus:outline-none focus:ring px-5 py-1">
           <span class="text-sm font-medium">Who I am</span>
         </a>
 
-        <a href="/contact" title="" class="text-gray-500 transition hover:text-gray-700 focus:outline-none focus:ring px-5 py-1">
+        <a href="/contact" title="Contact" class="text-gray-500 transition hover:text-gray-700 focus:outline-none focus:ring px-5 py-1">
           <span class="text-sm font-medium">Contact</span>
         </a>
 
