--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -16,7 +16,7 @@ const { title } = Astro.props;
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link href="/favicon.ico" type="image/x-icon" rel="icon" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
