--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,31 +1,31 @@
-<header aria-label="Page Header" class="bg-gray-50">
+<header aria-label="Page Header" class="bg-gray-50 dark:bg-gray-800">
   <div class="mx-auto max-w-screen-xl px-4 py-6 sm:py-10 sm:px-6 lg:px-8">
     <div class="sm:flex sm:items-center sm:justify-between">
 
       <div class="text-center sm:text-left">
-        <a href="/" class="text-2xl font-bold text-gray-900 sm:text-3xl">
+        <a href="/" class="text-2xl font-bold text-gray-900 sm:text-3xl dark:text-white">
           Kevin Fiorentino —△🌈
         </a>
-        <p class="mt-1.5 text-sm text-gray-500">
+        <p class="mt-1.5 text-sm text-gray-500 dark:text-white">
           Javascript Engineer | Blockchain & Web3 | Graduate in Systems
         </p>
       </div>
 
       <div class="mt-4 flex flex-col gap-4 sm:mt-0 sm:flex-row sm:items-center">
 
-        <a href="/" title="Home" class="text-gray-500 transition hover:text-gray-700 focus:outline-none focus:ring px-5 py-1">
+        <a href="/" title="Home" class="text-gray-500 transition hover:text-gray-700 focus:outline-none focus:ring px-5 py-1 dark:text-white">
           <span class="text-sm font-medium">Home</span>
         </a>
 
-        <a href="/blog" title="Blog" class="text-gray-500 transition hover:text-gray-700 focus:outline-none focus:ring px-5 py-1">
+        <a href="/blog" title="Blog" class="text-gray-500 transition hover:text-gray-700 focus:outline-none focus:ring px-5 py-1 dark:text-white">
           <span class="text-sm font-medium">Blog</span>
         </a>
 
-        <a href="/who-i-am" title="Who I am" class="text-gray-500 transition hover:text-gray-700 focus:outline-none focus:ring px-5 py-1">
+        <a href="/who-i-am" title="Who I am" class="text-gray-500 transition hover:text-gray-700 focus:outline-none focus:ring px-5 py-1 dark:text-white">
           <span class="text-sm font-medium">Who I am</span>
         </a>
 
-        <a href="/contact" title="Contact" class="text-gray-500 transition hover:text-gray-700 focus:outline-none focus:ring px-5 py-1">
+        <a href="/contact" title="Contact" class="text-gray-500 transition hover:text-gray-700 focus:outline-none focus:ring px-5 py-1 dark:text-white">
           <span class="text-sm font-medium">Contact</span>
         </a>
 
