--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -23,7 +23,7 @@ const day = d.getDate();
 ---
 
 <article class="blog-card-background hover:shadow-xl">
-  <a href=`blog/${slug}` title={ title } class="flex transition">
+  <a href={slug} title={ title } class="flex transition">
     <div class="rotate-180 p-2 [writing-mode:_vertical-lr]">
       <time datetime={date} class="flex items-center justify-between text-white text-xs font-bold uppercase gap-4">
         <span>{ year }</span>
