--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,7 +1,7 @@
 ---
 import { getCollection } from 'astro:content';
-import MainLayout from '../layouts/MainLayout.astro';
-import BlogCard from '../components/BlogCard.astro';
+import MainLayout from '../../layouts/MainLayout.astro';
+import BlogCard from '../../components/BlogCard.astro';
 
 const solanaPosts = await getCollection('solana');
 console.log('solanaPosts', solanaPosts);
