--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -37,7 +37,7 @@
             <div class="flex flex-col justify-center items-center">
 
               <div>
-                <button id="toggle-dark-mode" class="inline-flex items-center justify-center rounded-md text-gray-400 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-blue">
+                <button id="toggle-dark-mode" class="inline-flex items-center justify-center rounded-md text-gray-400 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-blue p-2">
                   <svg id="moon-icon" fill="none" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path fill="white" stroke-linecap="round" stroke-linejoin="round" d="M21.752 15.002A9.718 9.718 0 0118 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 003 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 009.002-5.998z"></path>
                   </svg>
@@ -49,7 +49,7 @@
 
               <div class="inset-y-0 left-0 flex items-center md:hidden">
                 <!-- Mobile menu button -->
-                <button id="toggle-mobile-menu" type="button" class="inline-flex items-center justify-center rounded-md p-2 text-gray-400 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-blue" aria-controls="mobile-menu" aria-expanded="false">
+                <button id="toggle-mobile-menu" type="button" class="inline-flex items-center justify-center rounded-md text-gray-400 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-blue p-2" aria-controls="mobile-menu" aria-expanded="false">
                   <span class="sr-only">Open main menu</span>
                   <!-- Icon when menu is closed. Menu open: "hidden", Menu closed: "block" -->
                   <svg id="menu-open" class="block h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">            <!-- aria-hidden="true" -->
@@ -122,7 +122,7 @@
 </script>
 
 <style>
-  #toggle-dark-mode {
+  #moon-icon, #sun-icon {
     width: 24px;
     height: 24px;
   }
