--- a/src/pages/who-i-am.astro
+++ b/src/pages/who-i-am.astro
@@ -1,5 +1,5 @@
 ---
-import MainLayout from '../layouts/MainLayout.astro';
+import MainLayout from '@layouts/MainLayout.astro';
 ---
 
 <MainLayout title="Who I am? | Kevin Fiorentino">
